--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=accounts
+spring.datasource.url=jdbc:mysql://localhost:3307/accounts
+spring.datasource.username=root
+spring.datasource.password=Livefree1128
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#removing this hibernate dialect mysql to let hibernate handling and detecting correct in myDB
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#adding this for not causing any-incrementing in my tables and not implementing lazy-loaded
+spring.jpa.open-in-view=true
+
+
+
+server.port=8080
